api integration/category,product

--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -1,8 +1,19 @@
 <table class="table">
-    <tr *ngFor="let product of products">
-        <td>{{product.productId}}</td>
-        <td>{{product.productName}}</td>
-        <td>{{product.categoryId}}</td>
-        <td>{{product.unitPrice}}</td>
-    </tr>
+    <thead>
+        <tr>
+          <th scope="col">#</th>
+          <th scope="col">First Name</th>
+          <th scope="col">Category</th>
+          <th scope="col">Unit Price</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let product of products">
+            <td>{{product.productId}}</td>
+            <td>{{product.productName}}</td>
+            <td>{{product.categoryId}}</td>
+            <td>{{product.unitPrice}}</td>
+        </tr>
+      </tbody>
+  
 </table>
