Products are listed with httpclient

--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -5,6 +5,7 @@
           <th scope="col">First Name</th>
           <th scope="col">Category</th>
           <th scope="col">Unit Price</th>
+          <th scope="col">Unit In Stock</th>
         </tr>
       </thead>
       <tbody>
@@ -13,6 +14,7 @@
             <td>{{product.productName}}</td>
             <td>{{product.categoryId}}</td>
             <td>{{product.unitPrice}}</td>
+            <td>{{product.unitsInStock}}</td>
         </tr>
       </tbody>
   
